# saveslate

./: .env.example  .gitignore  AGENTS.md  BACKEND_PLAN.md  Dockerfile  Dockerfile.swiftwave  README.md  components.json  docker-compose.override.yml  docker-compose.yml  index.html  names.md  nginx.conf  nginx.swiftwave.conf  nginx.swiftwave.conf.template  package-lock.json  package.json  playwright.config.ts  recolor.md  regex_match.md  vite.config.ts  vitest.config.ts
backend/: .env.example  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 3f4e5a6b7c8d_add_category_group_type.py  5a57d82a2ce3_initial_schema.py  7c2b1f4d9e10_add_user_language_ai_settings.py  9b3f5f7a14d2_add_transaction_notes.py
backend/app/: config.py  database.py  main.py
backend/app/models/: automation_rule.py  category_group.py  csv_parser.py  goal.py  transaction.py  user.py
backend/app/routers/: accounts.py  analytics.py  auth.py  automation_rules.py  categories.py  csv_import.py  csv_parsers.py  import_batches.py  tags.py  transactions.py
backend/app/schemas/: account.py  category.py  category_group.py  tag.py  transaction.py  user.py
backend/saveslate_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: conftest.py  test_accounts.py  test_analytics.py  test_auth.py  test_automation_engine.py  test_automation_rules.py  test_categories.py  test_category_groups.py  test_csv_import_endpoint.py  test_csv_import_service.py  test_csv_parsers.py  test_goals.py  test_import_batches.py  test_tags.py  test_transactions.py  test_transfer_pairs.py
(+224 files in other folders)
